- 1.32 released -

Fix installation of source and debug sets, which had been broken since
the label displayed by sysinst was changed from "Source sets" to
"Source and debug sets".

- 1.31 released -

Fix a failure to consume a shell prompt which would cause it to remain
buffered and later be mistaken for one that had not yet issued.  For
added protection, add a unique serial number to each prompt.

Omit drive index from qemu command line for backwards compatibility
with scripts written for anita 1.29 or older.

Fix X11 set names.

- 1.30 released -

Increase the default timeout for running the NetBSD test
suite from 2 hours to 3 hours.

Add support for installing the new "debug" set, and add a new
man page section on using anita for debugging NetBSD.

Organize the BUGS section of the man page into sections,
and add links to four more qemu 1.x regressions.

Add Kuya support, based on patch from Julio Merino.

New command line option "--version".

Support booting i386 and amd64 from boot-com.iso instead
of the boot floppies, attaching a second virtual CD-ROM drive
for the install sets.  Enable with "--boot-from cdrom".

Fix the Anita 1.2 backwards compatibility Release class.

- 1.29 released -

Fix "xm" Xen interface support broken in 1.28.

- 1.28 released -

The "xl" Xen interface can now be selected with "--vmm xl".

Increase the default memory size for amd64 to 128M.

Improve progress messages when creating the disk image.

When execing /bin/sh, wait for its prompt before sending
it a command.

- 1.27 released -

Run shell commands on the target system using /bin/sh rather
than root's login shell, as sysinst no longer sets the login
shell to /bin/sh by default.

- 1.26 released -

Track the sysinst changes of 2012-04-06 introducing the new
post-install configuration menu.

Print a message before creating the disk image, as it can take
a long time and make it appear that anita has hung.

- 1.25 released -
